# nvml-exporter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: choco.yml
packaging/choco/nvml-exporter/: ReadMe.md  nvml-exporter.nuspec
packaging/choco/nvml-exporter/tools/: LICENSE.txt  VERIFICATION.txt  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
scripts/: install.bat  install.ps1  mkchoco.bat  mkchoco.ps1
src/: lib.rs  main.rs  str_helpers.rs
src/winsvc/: winsvc.rs
