[package]
name = "nvml-exporter-rs"
version = "0.0.6"
edition = "2021"

[lib]
name = "nvml_exporter"
path = "src/lib.rs"

[[bin]]
name = "nvml_exporter"
path = "src/main.rs"

[[bin]]
name = "nvml_exporter_svc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
nvml-wrapper = "~0.9"
prometheus = "~0.13"
hyper = { version = "~0.14", features = ["full"] }
tokio = { version = "~1", features = ["full"] }
clap = "~4"
futures = "~0.3"
warp = "~0.3"
log = "~0.4"
stderrlog = "~0.5"
term = "~0.7"
chrono = "~0.4"
universal-service = "~0.1"

[target.'cfg(windows)'.dependencies]
windows-service = "~0.6"